force-app/main/default/objects/Employment_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Copy_Housing_Seperator__c</fullName>
        <formula>IF( 
Cost_of_Housing_New__c &gt;= 1000000, 
TEXT(FLOOR(Cost_of_Housing_New__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Cost_of_Housing_New__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Cost_of_Housing_New__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Cost_of_Housing_New__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Housing Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Position_from_Account__c</fullName>
        <formula>TEXT(Staff_Member__r.Position__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Position from Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Probation_Salary_Seperator__c</fullName>
        <formula>IF(Salary_New__c &lt; 1000, TEXT( Monthly_Salary_During_Probation_New__c ), 
IF(Salary_New__c &lt; 1000000, TEXT(FLOOR(Monthly_Salary_During_Probation_New__c /1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Monthly_Salary_During_Probation_New__c ), 3), 
IF(Monthly_Salary_During_Probation_New__c &lt; 1000000000, TEXT(FLOOR(Monthly_Salary_During_Probation_New__c/1000000)) &amp; &apos;,&apos; &amp; TEXT(FLOOR(MOD(Monthly_Salary_During_Probation_New__c ,1000000)/1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Monthly_Salary_During_Probation_New__c ), 3), &quot;Error:Number Greater Than 999,999,999&quot;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Probation Salary Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Relocation_Seperator__c</fullName>
        <formula>IF( 
Cost_of_Relocation_New__c&gt;= 1000000, 
TEXT(FLOOR(Cost_of_Relocation_New__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Cost_of_Relocation_New__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Cost_of_Relocation_New__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Cost_of_Relocation_New__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Relocation Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Resulting_Bonus_Separator__c</fullName>
        <formula>IF( 
 Copy_Resulting_Bonus_Seperator__c &gt;= 1000000, 
TEXT(FLOOR( Copy_Resulting_Bonus_Seperator__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Salary__c &gt;= 1000, 
RIGHT(TEXT(FLOOR( Copy_Resulting_Bonus_Seperator__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR( Copy_Resulting_Bonus_Seperator__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Resulting Bonus Separator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Resulting_Bonus_Seperator__c</fullName>
        <description>Created to copy the resulting bonus using a workflow; and thus avoid the 5000 characters limitation.</description>
        <label>Copy Resulting Bonus WorkFlow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copy_Retention_Bonus_Seperator__c</fullName>
        <formula>IF( 
   Retention_Bonus_New__c  &gt;= 1000000, 
  TEXT(FLOOR(Retention_Bonus_New__c  / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Retention_Bonus_New__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Retention_Bonus_New__c  / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Retention_Bonus_New__c  )), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Retention Bonus Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Salary_Seperator__c</fullName>
        <formula>IF( 
  Salary_New__c &gt;= 1000000, 
  TEXT(FLOOR(Salary_New__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Salary_New__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Salary_New__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Salary_New__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Salary Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_School_Department__c</fullName>
        <formula>TEXT(Staff_Member__r.School_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy School Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Staff_Member_Capitalised__c</fullName>
        <formula>UPPER(Staff_Member_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Staff Member Capitalised</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Tall_Exchange_Rate_remove_minus__c</fullName>
        <formula>IF( Tally_Exchange_Rate_Gains_Losses__c &lt;0,Tally_Exchange_Rate_Gains_Losses__c+(Tally_Exchange_Rate_Gains_Losses__c*-2),Tally_Exchange_Rate_Gains_Losses__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Tall Exchange Rate remove minus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_Tally_Exchange_Rate_Gains_Losses__c</fullName>
        <formula>IF( 
 Copy_Tall_Exchange_Rate_remove_minus__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Copy_Tall_Exchange_Rate_remove_minus__c/ 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Copy_Tall_Exchange_Rate_remove_minus__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Copy_Tall_Exchange_Rate_remove_minus__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Copy_Tall_Exchange_Rate_remove_minus__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Copy_Tall_Exchange_Rate_remove_minus__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Tally Exchange Rate Gains/Losses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Monthly_Salary_12_Payments__c</fullName>
        <formula>IF( 
(Salary__c /12)&gt;= 1000000, 
TEXT(FLOOR((Salary__c /12) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
(Salary__c /12)&gt;= 1000, 
RIGHT(TEXT(FLOOR((Salary__c /12) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR((Salary__c /12) )), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD((Salary__c /12) , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD((Salary__c /12) , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD((Salary__c /12) , 1), 2) * 100, 99)) 
) 

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Monthly Salary (12 Payments)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Travel_Seperator__c</fullName>
        <formula>IF( 
Cost_of_Travel_Allowance_New__c&gt;= 1000000, 
TEXT(FLOOR(Cost_of_Travel_Allowance_New__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Cost_of_Travel_Allowance_New__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Cost_of_Travel_Allowance_New__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Cost_of_Travel_Allowance_New__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Travel Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_of_Health_Insurance_New__c</fullName>
        <inlineHelpText>Should be the total premium for the employee and all dependents covered within the package</inlineHelpText>
        <label>Cost of Health Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Health_Insurance__c</fullName>
        <label>Cost of Health Insurance (In Pri. Curr.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Housing_New__c</fullName>
        <label>Cost of Housing*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Housing__c</fullName>
        <label>Cost of Housing (In Pri. Currency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Other_Benefits_New__c</fullName>
        <label>Cost of Other Benefits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Other_Benefits__c</fullName>
        <label>Cost of Other Benefits (In Pri. Curr.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Points__c</fullName>
        <label>Cost of Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Relocation_New__c</fullName>
        <label>Cost of Relocation*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Relocation__c</fullName>
        <label>Cost of Relocation (Pri. Currency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Responsibility_Points__c</fullName>
        <formula>IF(TEXT(Status__c) = &quot;Active&quot;, Staff_Member__r.Responsibility_Points_Cost__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Responsibility Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Travel_Allowance_New__c</fullName>
        <label>Cost of Travel Allowance*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Travel_Allowance__c</fullName>
        <label>Cost of Travel Allowance (In Pri. Curr.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Active__c</fullName>
        <formula>IF(TEXT(Status__c) = &quot;Active&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Expired__c</fullName>
        <formula>IF( OR(TEXT(Status__c)=&quot;Expired&quot;,TEXT(Status__c)=&quot;Early Termination&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Other_Contracts__c</fullName>
        <formula>IF(OR(TEXT(Status__c)=&quot;Draft&quot;,TEXT(Status__c)=&quot;Approved-Not Signed&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Other Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Signed_Not_Started__c</fullName>
        <formula>IF(TEXT(Status__c) = &quot;Signed- Not Started&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Signed Not Started</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_of_the_regulating_law__c</fullName>
        <formula>IF(
   Staff_Member__r.School__c = &quot;The British School of Tashkent&quot;, &quot;Uzbekistan&quot;,
   IF(
      OR(
         Staff_Member__r.School__c = &quot;The British International School of Marbella&quot;,
         Staff_Member__r.School__c = &quot;The British School of Navarra&quot;
         ), 
      &quot;Spain&quot;,
      IF(
         Staff_Member__r.School__c = &quot;The International School of Moscow&quot;, 
         &quot;the Russian Federation&quot;,
         IF(
            Staff_Member__r.School__c = &quot;The British International School of Kuala Lumpur&quot;,     
            &quot;Malaysia&quot;,
            IF(
               Staff_Member__r.School__c = &quot;The British School of Nanjing&quot;, 
               &quot;the People&apos;s Republic of China&quot;,
               IF(
                  OR(
                     Staff_Member__r.School__c = &quot;The British College of Brazil&quot;, 
                     Staff_Member__r.School__c = &quot;The British School of Brasilia&quot;
                     ),
                  &quot;Brazil&quot;,
                  IF( 
                     Staff_Member__r.School__c = &quot;Nord Anglia International School Manila&quot;,
                     &quot;Philippines&quot;,
                     IF(
                        Staff_Member__r.School__c = &quot;The British School Yangon&quot;, 
                        &quot;Myanmar&quot;,
                        IF(
                           Staff_Member__r.School__c = &quot;The New York International School&quot;,    
                           &quot;the United States of America&quot;,
                           &quot;the United Kingdom&quot;
                           )
                        )
                     )
                  )
               )
            )
         ) 
      )  
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of The Regulating Law</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Edited__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Edited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Per_Week__c</fullName>
        <label>Days Per Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_per_Week_Words__c</fullName>
        <formula>IF( TEXT(Days_Per_Week__c) = &quot;1&quot;, &quot;one&quot;,

IF( TEXT(Days_Per_Week__c) = &quot;2&quot;, &quot;two&quot;, 

IF( TEXT(Days_Per_Week__c) = &quot;3&quot;, &quot;three&quot;, 

IF( TEXT(Days_Per_Week__c) = &quot;4&quot;, &quot;four&quot;, 

IF( TEXT(Days_Per_Week__c) = &quot;5&quot;, &quot;five&quot;, &quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days per Week (Words)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Days_Off_Approver_ID__c</fullName>
        <formula>Staff_Member__r.Default_Days_Off_Approver__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Days Off Approver ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Days_Off_Approver_Name__c</fullName>
        <formula>Staff_Member__r.Default_Days_Off_Approver__r.FirstName &amp; &quot; &quot; &amp; Staff_Member__r.Default_Days_Off_Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Days Off Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>AND( 
    School__c = &quot;The British International School of Kuala Lumpur&quot;, 
    OR( 
       TEXT(Status__c) = &quot;Active&quot;, 
       TEXT(Status__c) = &quot;Signed- Not Started&quot; 
       ), 
    OR( 
       TEXT(Staff_Member__r.School_Department__c) = &quot;Administration&quot;, 
       TEXT(Staff_Member__r.School_Department__c) = &quot;Support Staff&quot; 
       ), 
    ISBLANK(Termination_Date__c)
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <formula>If( OR(TEXT(Status__c) =&quot;draft&quot;,TEXT(Status__c) =&quot;Awaiting Approval&quot;) ,&quot;DRAFT VERSION&quot;&amp;BR(),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draft?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Text__c</fullName>
        <formula>TEXT (End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <inlineHelpText>Indicate the secondary currency equivalent of one unit of the primary currency i.e. 1 unit of Primary Currency = 0.6102 units of Secondary Currency (up to 4DP). If left blank, a default value will be used. Contact group office to change the default.</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Approver__c</fullName>
        <description>The first approver for approval processes that include more than one approver</description>
        <label>First Approver</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gross_Net__c</fullName>
        <formula>IF(INCLUDES(Net_Components__c, &quot;Salary&quot;), &quot;Net&quot;, &quot;Gross&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary Gross/Net</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Insurance_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Health Insurance&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Insurance Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Insurance__c</fullName>
        <label>Health Insurance*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holidays_Admin_Support_Staff__c</fullName>
        <label>Holidays (Admin/Support Staff)*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holidays_Day_Type__c</fullName>
        <label>Holidays Day Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working Days</fullName>
                    <default>true</default>
                    <label>Working Days</label>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holidays_Taken__c</fullName>
        <label>Holidays Taken</label>
        <summarizedField>Days_Off__c.Approved_Holidays__c</summarizedField>
        <summaryForeignKey>Days_Off__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Holidays_Words__c</fullName>
        <formula>IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;1&quot;, &quot;one (1) day&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;2&quot;, &quot;two (2) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;3&quot;, &quot;three (3) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;4&quot;, &quot;four (4) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;5&quot;, &quot;five (5) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;6&quot;, &quot;six (6) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;7&quot;, &quot;seven (7) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;8&quot;, &quot;eight (8) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;9&quot;, &quot;nine (9) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;10&quot;, &quot;ten (10) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;11&quot;, &quot;eleven (11) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;12&quot;, &quot;twelve (12) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;13&quot;, &quot;thirteen (13) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;14&quot;, &quot;fourteen (14) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;15&quot;, &quot;fifteen (15) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;16&quot;, &quot;sixteen (16) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;17&quot;, &quot;seventeen (17) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;18&quot;, &quot;eighteen (18) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;19&quot;, &quot;nineteen (19) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;20&quot;, &quot;twenty (20) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;21&quot;, &quot;twenty one (21) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;22&quot;, &quot;twenty two (22) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;23&quot;, &quot;twenty three (23) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;24&quot;, &quot;twenty four (24) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;25&quot;, &quot;twenty five (25) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;26&quot;, &quot;twenty six (26 days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;27&quot;, &quot;twenty seven (27) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;28&quot;, &quot;twenty eight (28) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;29&quot;, &quot;twenty nine (29) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;30&quot;, &quot;thirty (30) days&quot;,
IF (TEXT ( Holidays_Admin_Support_Staff__c ) = &quot;31&quot;, &quot;thirty one (31) days&quot;,&quot;&quot;)))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holidays Words</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Day__c</fullName>
        <label>Hours Per Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_per_Day_Words__c</fullName>
        <formula>IF( TEXT(Hours_Per_Day__c) = &quot;1&quot;, &quot;one&quot;,

IF( TEXT(Hours_Per_Day__c) = &quot;2&quot;, &quot;two&quot;, 

IF( TEXT(Hours_Per_Day__c) = &quot;3&quot;, &quot;three&quot;, 

IF( TEXT(Hours_Per_Day__c) = &quot;4&quot;, &quot;four&quot;, 

IF( TEXT(Hours_Per_Day__c) = &quot;5&quot;, &quot;five&quot;, 

IF( TEXT(Hours_Per_Day__c) = &quot;6&quot;, &quot;six&quot;, 

IF( TEXT(Hours_Per_Day__c) = &quot;7&quot;, &quot;seven&quot;,

IF( TEXT(Hours_Per_Day__c) = &quot;8&quot;, &quot;eight&quot;,

IF( TEXT(Hours_Per_Day__c) = &quot;9&quot;, &quot;nine&quot;, &quot;&quot;)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours per Day (Words)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Housing&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Gross_Net__c</fullName>
        <formula>IF(INCLUDES(Net_Components__c, &quot;Housing&quot;), &quot;Net&quot;, &quot;Gross&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Gross/Net</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <description>Defines the email address of the initial submitter for use in sending update emails to the same.</description>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Main_Approver__c</fullName>
        <formula>Staff_Member__r.Main_Approver__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maternity_Leave_Calendar_Days__c</fullName>
        <label>Maternity Leave (Calendar Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maternity_Leave_Taken__c</fullName>
        <label>Maternity Leave Taken</label>
        <summarizedField>Days_Off__c.Approved_Maternity_Leave__c</summarizedField>
        <summaryForeignKey>Days_Off__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maternity_Paternity_Leave__c</fullName>
        <label>Maternity/Paternity Leave*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 days</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>4 days</fullName>
                </value>
                <value>
                    <fullName>5 days</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Salary_12_Months__c</fullName>
        <formula>ROUND(Salary__c /12,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Salary 12 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Salary_During_Probation_New__c</fullName>
        <label>Monthly Salary During Probation*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Salary_During_Probation__c</fullName>
        <label>Monthly Salary During Probation (In Pri)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Salary_after_Probation__c</fullName>
        <formula>IF(
   OR(
      Probation_Period_Number__c = 0,
      Monthly_Salary_During_Probation_New__c = 0
      ),
      ROUND(Salary__c /12,2),
      (Salary__c - (Monthly_Salary_During_Probation_New__c* Probation_Period_Number__c))/(12-Probation_Period_Number__c)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Salary after Probation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_Probation__c</fullName>
        <label>Probation Period*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Month</fullName>
                </value>
                <value>
                    <fullName>Two Months</fullName>
                </value>
                <value>
                    <fullName>Three Months</fullName>
                </value>
                <value>
                    <fullName>Four Months</fullName>
                </value>
                <value>
                    <fullName>Five Months</fullName>
                    <default>true</default>
                    <label>Five Months</label>
                </value>
                <value>
                    <fullName>Six Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Components__c</fullName>
        <inlineHelpText>Select the employment agreement components that will be paid NET of taxes (any components not selected will be considered GROSS)</inlineHelpText>
        <label>Net Components (if any)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salary</fullName>
                </value>
                <value>
                    <fullName>Performance Bonus</fullName>
                </value>
                <value>
                    <fullName>Retention Bonus</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Travel Allowance</fullName>
                </value>
                <value>
                    <fullName>Relocation Allowance</fullName>
                </value>
                <value>
                    <fullName>Other Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Payments_Per_Year__c</fullName>
        <formula>IF(
   School__c = &quot;The British College of Brazil&quot;,
   14, 
   12
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Payments Per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectives_Target_Achieved__c</fullName>
        <formula>Objectives_in_Appraisal__r.Objectives_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Objectives Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Objectives_in_Appraisal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objectives in Appraisal</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Appraisal Staff member does not match with the staff member of the Employment Agreement.</errorMessage>
            <filterItems>
                <field>Appraisal_Objectives__c.Staff_Member__c</field>
                <operation>equals</operation>
                <valueField>$Source.Staff_Member__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Appraisal_Objectives__c</referenceTo>
        <relationshipLabel>Employment Agreements</relationshipLabel>
        <relationshipName>Employment_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Benefits_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Other Benefits&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Benefits Currency</label>
        <type>Text</type>
    </fields>
</CustomObject>